# snas

./: AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  socket_protocol.md
.github/workflows/: pam-e2e.yml  tests.yml
crates/pam-nats/: Cargo.toml
crates/pam-socket/: Cargo.toml
crates/pam-socket/src/: lib.rs
crates/snas-lib/: Cargo.toml
crates/snas-lib/src/: handlers.rs  lib.rs  storage.rs
crates/snas-lib/src/clients/: mod.rs  nats.rs
crates/snas-lib/src/servers/: mod.rs
crates/snas-lib/src/servers/nats/: mod.rs  user.rs
crates/snas-lib/src/types/: mod.rs
src/: error.rs  handlers.rs  lib.rs  main.rs  storage.rs  types.rs
src/clients/: mod.rs  nats.rs  socket.rs
src/servers/: mod.rs  nats.rs  socket.rs
src/servers/nats/: admin.rs  mod.rs  user.rs
src/types/: admin.rs  api.rs  mod.rs  secure.rs
tests/: helpers.rs  nats_e2e.rs  socket_e2e.rs  storage.rs
tests/pam-e2e/: Dockerfile  docker-compose.yml  pam-build.Dockerfile  pam_test.c  run.sh  setup_probe.sh
tests/pam-e2e/pam.d/: probe  snas
