[package]
name = "snas"
description = "Simple NATS Auth Service - A simple, distributed, and highly available directory service for authentication and authorization."
version = "0.1.0"
edition = "2021"
authors = ["Taylor Thomas <taylor@oftaylor.com>"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
snas-lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
bincode = { workspace = true }
tempfile = { workspace = true }

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1"
argon2 = "0.5"
async-nats = "0.38"
bincode = "2.0.0-rc.3"
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"
pam-bindings = "0.1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
snas-lib = { version = "0.1", path = "./crates/snas-lib" }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "ansi"] }

[[bin]]
name = "snas-server"
path = "bin/server/main.rs"

[[bin]]
name = "snas"
path = "bin/cli/main.rs"
