[package]
name = "pam-nats"
version = "0.1.0"
edition = "2021"

[lib]
name = "snas_pam_nats"
crate-type = ["cdylib"]

[dependencies]
pam-bindings = { workspace = true }
snas-lib = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
