[package]
name = "pam-socket"
version = "0.1.0"
edition = "2021"

[lib]
name = "snas_pam_socket"
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
pam-bindings = { workspace = true }
snas-lib = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
